fixed icon not showing on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,7 +4,6 @@
     background: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
     opacity: 0;
-    
 }
 .content-slot, .content2-slot, .content3-slot, .content4-slot {
     height:30vh;
@@ -100,6 +99,7 @@
     transform: translate(-50%, -50%);
     width: 100%;
 }
+/* welcome animation section --------------------------------------------------------------- */
 .welcome-message{
     font-size: clamp(2rem, 5vw, 6rem);
     font-weight: bold;
@@ -151,6 +151,9 @@
   0% { transform: translateX(0); opacity: 1; }
   100% { transform: translateX(-100vw); opacity: 0.5; } /* at .35 of a second start the unobx animation for main -35 */
 }
+
+/* welcome animation section --------------------------------------------------------------------------------------------------------------------*/
+
 .content3,.content,.content4,.content2 {
     display: flex;
     flex-direction: column;
@@ -176,6 +179,12 @@
     align-items: center;
     gap: clamp(0.5rem, 1.5vw, 1.2rem);
     flex-wrap: wrap;
+    
+}
+@media(max-width:600px){
+    .box-content{
+        overflow-y: scroll;
+    }
 }
 
 .profile-img {
@@ -209,8 +218,16 @@
     text-shadow: 0 0 8px rgba(255, 255, 255, 0.8),
                0 0 20px rgba(180, 180, 255, 0.5);
 }
-.content-para{
+.content-para{ /* styles the paragraph for the about overview section font-size: clamp(0.7rem, 1vw, 0.85rem); */
     font-size: clamp(0.6rem, 1vw, 1rem);
+    color:rgba(255, 255, 255, 0.904);
+    
+
+}
+@media(max-width:100px){
+    #content3-extended{
+        display:none;
+    }
 }
 .header-row{
     display:flex;
@@ -257,7 +274,7 @@
 
 .project p {
     font-size: clamp(0.7rem, 1vw, 0.85rem);
-    color: rgba(224, 224, 255, 0.8);
+    color:rgba(255, 255, 255, 0.904);
     line-height: 1.5;
 }
 
@@ -414,6 +431,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 0.3rem 0;
+    overflow-y: scroll;
 }
 
 .education {
